# astrolab

./: .gitignore  LICENSE  README.md  pyproject.toml
astrolab/: __init__.py  acoustic.py  imaging.py  optical.py  photometry.py  spectroscopy.py  timing.py
astrolab/data/: bright_star_catalog.csv
docs/: README.md  README.rst  requirements.txt
docs/source/: astrolab.acoustic.rst  astrolab.imaging.rst  astrolab.optical.rst  astrolab.photometry.rst  astrolab.rst  astrolab.spectroscopy.rst  astrolab.timing.rst  conf.py  getting-started.rst  index.rst  modules.rst  tutorials-acoustic.rst  tutorials-optical.rst  tutorials.rst
docs/source/_static/: custom.css
docs/source/tutorials/: acoustic-binary-tutorial.ipynb  fraunhofer-lines-tutorial.ipynb  image-reduction-tutorial.ipynb  stacking-tutorial.ipynb  stellar-photometry-tutorial.ipynb  stellar-spectroscopy-tutorial.ipynb
